Refactor the tests + cleanup of the dependencies (#23)